syntax = "proto3";

option go_package = "github.com/smartcontractkit/chainlink-common/pkg/loop/internal/pb/keystore;keystorepb";

package loop.internal.pb.keystore;

service Keystore {
  rpc Sign(SignRequest) returns (SignResponse);
  rpc SignBatch(SignBatchRequest)returns (SignBatchResponse);
  rpc Verify(VerifyRequest)returns (VerifyResponse);
  rpc VerifyBatch(VerifyBatchRequest)returns (VerifyBatchResponse);

  rpc List(ListRequest)returns (ListResponse);

  rpc RunUDF(RunUDFRequest)returns (RunUDFResponse);

  //
  rpc Import(ImportRequest)returns(ImportResponse);
  rpc Export(ExportRequest)returns(ExportResponse);

  rpc Create(CreateRequest)returns(CreateResponse);
  rpc Delete(DeleteRequest)returns(DeleteResponse);

  rpc AddTag(AddTagRequest)returns(AddTagResponse);
  rpc RemoveTag(RemoveTagRequest)returns(RemoveTagResponse);
  rpc ListTags(ListTagsRequest)returns(ListTagsResponse);
}

message SignRequest {
  bytes keyID = 1;
  bytes data = 2;
}

message SignResponse {
  bytes data = 1;
}

message SignBatchRequest {
  bytes keyID = 1;
  repeated bytes data = 2;
}

message SignBatchResponse {
  repeated bytes data = 1;
}

message VerifyRequest {
  bytes keyID = 1;
  bytes data = 2;
}

message VerifyResponse {
  bool valid = 1;
}

message VerifyBatchRequest {
  bytes keyID = 1;
  repeated bytes data = 2;
}

message VerifyBatchResponse {
  repeated bool valid = 1;
}

message ListRequest {
  repeated string tags = 1;
}

message ListResponse {
  repeated bytes keyIDs = 1;
}

message RunUDFRequest {
  string udfName = 1;
  bytes keyID = 2;
  bytes data = 3;
}

message RunUDFResponse {
  bytes data = 1;
}

message ImportRequest {
  string keyType = 1;
  bytes data = 2;
  repeated string tags = 3;
}

message ImportResponse {
  bytes keyID = 1;
}

message ExportRequest {
  bytes keyID = 1;
}

message ExportResponse {
  bytes data = 1;
}

message CreateRequest {
  string keyType = 1;
  repeated string tags = 2;
}

message CreateResponse{
  bytes keyID =1;
}

message DeleteRequest{
  bytes keyID =1;
}

message DeleteResponse{}

message AddTagRequest{
  bytes keyID=1;
  string tag =2;
}

message AddTagResponse{}

message RemoveTagRequest{
  bytes keyID =1;
  string tag =2;
}

message RemoveTagResponse{}

message ListTagsRequest{
  bytes keyID=1;
}

message ListTagsResponse{
  repeated string tags=1;
}
